--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,13 @@
     "description": "The demo for QuickBooks PHP Open Source Release",
     "type": "library",
     "require": {
-        "php": ">=5.6.25"
+        "php": ">=5.6.25",
+        "ext-OAuth": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
     },
-    "license": "Apache 2.0",
+    "license": "Apache-2.0",
     "authors": [
         {
             "name": "hlu2",
